refactoring classe Stanza e Attrezzo
introdotta la mappa per le stanza adiacenti, corretti gli ordinamenti per Attrezzo